# audit-normalizer

./: CHANGELOG.md  README.md  pyproject.toml
src/auditnorm/: __init__.py  adapters.py  cli.py  schema.py
tests/: test_adapters.py
