[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "auditnorm"
version = "0.2.0"
description = "Normalize audit logs from ServiceNow, AWS, Okta, Splunk, GCP, Azure, and GitHub into one common schema, with source auto-detection."
readme = "README.md"
authors = [{ name = "Joshua John", email = "josh202@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["audit", "siem", "normalization", "ocsf", "cloudtrail", "compliance"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
auditnorm = "auditnorm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
